Add monitoring all client connections